--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "node-fetch": "^2.6.9"
   },
   "devDependencies": {
+    "@gradio/client": "^1.7.1",
     "@types/node": "^22.8.6",
     "tsx": "^4.19.2",
     "typescript": "^5.6.3"
